@startuml HealthStock

' Classes de Domínio (Estoque)
class Fornecedor {
  - id : int
  - nome : String
  - cnpj : String
  - telefone : String
  - endereco : String
  - email : String
  + {static} carregar(fornecedorCSV: String) : Fornecedor
  + salvar() : String
}

class Produto {
  - id : int
  - nome : String
  - quantidade : int
  - idFornecedor : int
  - setor : String
  + toCSV() : String
  + {static} fromCSV(values: String[]) : Produto
  + clone(novaQuantidade: int) : Produto
}

class Medicacao extends Produto {
  - lote : String
  - validade : Date
  - ultimoResponsavel : String
  - dataUltimoResponsavel : Date
  + verificarValidade() : boolean
  + atualizarResponsavel(responsavel: String) : void
  + atualizarDetalhes(detalhes: String) : void
}

' Classes de Domínio (Setor)
class Pedido {
    - final int id
    - final String setorSolicitante
    - final String setorResponsavel
    - final String produto
    - final int quantidade
    - String estado
    - String detalhes
    + Date dataPedido
    
    + Pedido(int, String, String, String, int)
    + Pedido(int, String, String, String, int, String, String, Date)
    + Pedido(int, String, String, String, int, String, String)
    + toCSV(): String
    + setDataPedido(Date): void
    + setDetalhes(String): void
}

abstract class Setor {
  # nome : String
  - senha : String
  + {static} carregar(nomeSetor: String) : Setor
  + validarSenha(senha: String) : boolean
  + criarPedido(pedido: Pedido) : void
  + aprovarPedido(pedido: Pedido, aprovado: boolean) : void
  + listarPedidos() : List<Pedido>
  + listarPedidosPorEstado(estado: String) : List<String>
  + entradaProduto(produto: Produto) : void
  + retiradaProduto(id: int, quantidade: int) : Produto
  + consumirProduto(id: int, quantidade: int) : void
  + getProdutos() : List<Produto>
  + getProduto(id: int) : Produto
}

class SetorEntrada extends Setor {
  + entradaProduto(produto: Produto) : void
  - distribuirProduto(produto: Produto) : void
}

class SetorCadastro extends Setor {
  + cadastroFornecedor(nome: String, cnpj: String, ...) : void
  + getFornecedores() : List<Fornecedor>
  + getFornecedor(id: int) : Fornecedor
  + cadastroProduto(nome: String, fornecedorId: int, tipo: String) : void
  + retiradaProduto(id: int, quantidade: int) : Produto
}

' Classes de Serviço e Utilitários
class PersistenceService {
  - {static} PRODUTOS_CSV : String
  - {static} PEDIDOS_FILE : String
  + {static} carregarProdutos(filtro: Predicate) : List<Produto>
  + {static} salvarProdutos(todosProdutos: List<Produto>) : void
  + {static} salvarProduto(produto: Produto) : void
  + {static} removerProduto(produto: Produto) : void
  + {static} getNextPedidoId() : int
  + {static} carregarPedidos(predicate: Predicate) : List<Pedido>
  + {static} salvarPedido(pedido: Pedido) : void
  + {static} salvarPedidos(pedidos: List<Pedido>) : void
}

class Auxiliar {
  + {static} SETOR_MEDICACAO : String
  + {static} SETOR_ENTRADA : String
  + {static} SETOR_CADASTRO : String
  + {static} SDF : SimpleDateFormat
  + {static} path(...) : String
  + {static} checkFile(file: File) : void
  + {static} error(message: String) : void
  + {static} encrypt(setor: String, senha: String) : String
}

Setor ..> PersistenceService : usa
SetorCadastro ..> Fornecedor : gerencia
Produto "1" -- "1" Fornecedor : é fornecido por >

note top of SetorCadastro
  Setor de compras, responsável
  pelo cadastro de produtos e
  fornecedores.
end note

note bottom of SetorEntrada
  Almoxarifado, ponto central
  de recebimento de produtos.
  Distribui para outros setores.
end note

@enduml